A lot of bugfixes. Added selenium crash handler to restart selenium after crash. Removed honeypot url saving due to them being autogenerated each scrape, added a honeypot parameter to ignore urls starting with specific handle. Added progress logging as well as an optional progress bar.

--- a/scraper/config_scraper.json
+++ b/scraper/config_scraper.json
@@ -26,7 +26,8 @@
   "urls":{
     "main": "https://www.aruodas.lt/butu-nuoma/",
     "listings": "https://www.aruodas.lt/butu-nuoma/puslapis/",
-    "listings_settings": "/?FOrder=AddDate&detailed_search=1"
+    "listings_settings": "/?FOrder=AddDate&detailed_search=1",
+    "honeypot": "https://www.aruodas.lt/butai-vilniuje-pasilaiciuose-laisves-pr-4"
   },
 
   "file_paths": {
