--- a/scraper/config_scraper.json
+++ b/scraper/config_scraper.json
@@ -31,7 +31,6 @@
   },
 
   "file_paths": {
-    "tor": "/tor-win32-0.4.2.7/Tor/tor.exe",
-    "chrome": "/chromedriver.exe"
+    "tor": "/tor-win32-0.4.2.7/Tor/tor.exe"
   }
 }
