Bugfixes, cleaning up of code.

--- a/scraper/vm/Dockerfile
+++ b/scraper/vm/Dockerfile
@@ -1,13 +1,13 @@
 FROM ubuntu:latest
 
-# JOIN THIS WITH BOTTOM, ONLY FOR TESTING NOW.
-RUN apt-get update
-
-RUN apt-get install -y \
+RUN apt-get update && apt-get install -y \
 	python3-pip \ 
 	wget
-	
-RUN DEBIAN_FRONTEND="noninteractive" apt-get -y install tzdata
+
+# Variable is needed to install tzdata on Docker, which is required to install Chrome.
+RUN DEBIAN_FRONTEND="noninteractive" apt-get install -y tzdata
+
+# Install Chrome.
 RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
 RUN apt-get install -y ./google-chrome-stable_current_amd64.deb 	
 	
